source/sass/blocks/direction-card.scss
.direction-card {
  height: size(425px);
  padding: size(55px) size(20px) size(95px);
  background-color: $color-default-white;
  border-radius: size(56px);
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  column-gap: size(26px);
  row-gap: size(70px);
  overflow-x: hidden;
  overflow-y: scroll;

  @include vp-1023 {
    row-gap: 20px;
  }

  @include vp-767 {
    width: 280px;
    height: 280px;
    padding: 37px 5px 52px 15px;
    column-gap: 16px;
    row-gap: 44px;
    border-radius: 35px;
    overflow: hidden;
  }

  h3 {
    margin: 0;
    width: 75%;
    font-size: size(25px);
    line-height: 100%;
    font-weight: 500;
    color: $color-night-rider;
    word-wrap: break-word;

    @include vp-1023 {
      font-size: 12px;
    }

    @include vp-767 {
      font-size: 18px;
      color: $color-default-white;
    }
  }

  &__icon-wrapper {
    width: size(55px);
    height: size(55px);

    @include vp-767 {
      width: 37px;
      height: 37px;
    }

    svg {
      width: size(55px);
      height: size(55px);

      @include vp-767 {
        width: 37px;
        height: 37px;
      }
    }
  }

  &__list {
    margin: 0;
    padding: 0;
    list-style-type: none;

    mask-image: $gray-to-bottom;
    height: size(146px);

    display: flex;
    flex-wrap: wrap;
    row-gap: size(3px);
    column-gap: 12%;

    @include vp-767 {
      height: fit-content;
      row-gap: 0;
      column-gap: 10%;
    }
  }

  &__item {
    position: relative;

    &:nth-child(odd)::after {
      content: "";
      display: block;
      position: absolute;
      top: size(6px);
      right: size(-30px);
      width: size(15.56px);
      height: size(15.56px);

      mask-image: url("../../img/svg/star-divider.svg");
      background-color: $color-dim-gray-2;
      mask-size: size(16px) size(16px);
      mask-repeat: no-repeat;
      mask-position: center;

      @include vp-767 {
        top: 6px;
        right: -18px;
        background-color: $color-default-white;
        width: 10px;
        height: 10px;
        mask-size: 10px 10px;
      }
    }

    p {
      margin: 0;
      font-size: size(17px);
      line-height: 160%;
      color: $color-dim-gray;

      @include vp-1023 {
       font-size: 8px;
      }

      @include vp-767 {
        color: $color-default-white;
        font-size: 14px;
      }
    }
  }

  // состояние карточки
  &:hover {
    h3,
    p {
      color: $color-default-white;
    }

    .direction-card__item:nth-child(odd)::after {
      background-color: $color-default-white;
    }
  }
}

